codegen/tests/compiler_output/bad-infra.rs
#[shuttle_codegen::main(something = "not right")]
async fn bad_infra() -> ShuttleRocket {}
